@@ -19,6 +19,7 @@ package org.apache.cassandra.db.rows;
 import java.nio.ByteBuffer;
 import java.security.MessageDigest;
 import java.util.AbstractCollection;
+import java.util.Collection;
 import java.util.Objects;
 
 import com.google.common.collect.Iterables;
@@ -35,7 +36,7 @@ import org.apache.cassandra.utils.FBUtilities;
  * Unless you have a very good reason not to, every row implementation
  * should probably extend this class.
  */
-public abstract class AbstractRow extends AbstractCollection<ColumnData> implements Row
+public abstract class AbstractRow implements Row
 {
     public Unfiltered.Kind kind()
     {
@@ -97,6 +98,11 @@ public abstract class AbstractRow extends AbstractCollection<ColumnData> impleme
             if (cd.hasInvalidDeletions())
                 return true;
         return false;
+    }
+
+    public String toString()
+    {
+        return columnData().toString();
     }
 
     public String toString(CFMetaData metadata)
