@@ -1,4 +1,5 @@
 3.0.18.0 (open)
+ * Unfiltered.isEmpty conflicts with Row extends AbstractCollection.isEmpty (CASSANDRA-14588)
  * Move TWCS message 'No compaction necessary for bucket size' to Trace level (CASSANDRA-14884)
  * Improve TokenMetaData cache populating performance avoid long locking (CASSANDRA-14660)
  * sstableloader should use discovered broadcast address to connect intra-cluster (CASSANDRA-14522)
